# api/api/swagger/swagger.yaml
@@ -198,26 +198,24 @@ paths:
           description: Feedback not found
       security:
         - api_key: []
-  '/feedback/unanswered/{user_id}':
+  '/feedback/unanswered/{receiver_id}':
     x-swagger-router-controller: feedback
     get:
       tags:
         - feedback
       summary: Get all unanswered feedbacks of a user
       description: Returns an array of Feedback objects that have no reply and were received by the user
-      operationId: getUnansweredFeedbacksByUserId
+      operationId: getUnansweredFeedbacksByReceiverId
       consumes:
         - application/x-www-form-urlencoded
       produces:
         - application/json
       parameters:
-        - name: user_id
+        - name: receiver_id
           in: path
           description: ID of user
           required: true
           type: string
-          format: regex
-          pattern: ^[a-z0-9][a-z0-9._-]*$
       responses:
         '200':
           description: successful operation
